--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
 <header id="page-heading" class="page-section"></header>
 <section id="values-intro" class="page-section"></section>
 <section id="values" class="page-section"></section>
+<section id="services" class="page-section"></section>
+<section id="faq" class="page-section"></section>
+<section id="reviews" class="page-section"></section>
+<section id="newsletter" class="page-section"></section>
+<footer id="page-footer" class="page-section"></footer>
 <script src="scroll.js"></script>
 </body>
 </html>
