no height change nav

--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
                     transition: transform 0.3s;
                 }
 
+                #logo-nav {
+                    transition: box-shadow 0.2s;
+                }
+
                 #logo-nav:focus {
                     box-shadow: inset 0px 0px 0px 5px #CCCCFF;
+                    transition: box-shadow 0.2s;
                 }
 
                 #logo-nav:hover #letter-e, #logo-nav:focus #letter-e {
