desktop-drop-down

--- a/index.html
+++ b/index.html
@@ -11,65 +11,70 @@
 <body onscroll="scrollfunction();" id="page">
 <nav id="navigation-bar" class="navigation-bar">
     <div id="content-box-nav">
-        <a id="logo-nav-link" href="# "tabindex="0" aria-label="Acceuil">
-        <svg version="1.1" id="logo-nav" aria-label="Mêco logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-        viewBox="0 0 1400 500" style="enable-background:new 0 0 1400 500;" xml:space="preserve">
-            <style type="text/css">
-                .letter {fill:#333333;}
-                .chapeau {fill:#3333ff;}
-                #letter-e {
-                    transform-origin: 48.016642857142857142857142857143% 63.95634%;
-                    transition: transform 0.3s;
-                }
+        <a id="logo-nav-link" href="#" tabindex="0" aria-label="Acceuil">
+            <svg version="1.1" id="logo-nav" aria-label="Mêco logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            viewBox="0 0 1400 500" style="enable-background:new 0 0 1400 500;" xml:space="preserve">
+                <style type="text/css">
+                    .letter {fill:#333333;}
+                    .chapeau {fill:#3333ff;}
+                    #letter-e {
+                        transform-origin: 48.016642857142857142857142857143% 63.95634%;
+                        transition: transform 0.3s;
+                    }
 
-                #logo-nav {
-                    transition: box-shadow 0.2s;
-                }
+                    #logo-nav {
+                        transition: box-shadow 0.2s;
+                    }
 
-                #logo-nav:hover #letter-e {
-                    transform: rotateZ(45deg);
-                    transition: transform 0.3s;
-                }
-                #chapeau {
-                    transition: transform 0.3s;
-                }
-                #logo-nav:hover #chapeau {
-                    transform: translateY(-7%);
-                    transition: transform 0.3s;
-                }
-            </style>
-            <g id="Layer">
-                <g id="mêco-original">
-                    <path class="letter" d="M1207.4,199.8c-66.3,0-120,53.7-120,120s53.7,120,120,120s120-53.7,120-120l0,0
-                        C1327.4,253.5,1273.7,199.8,1207.4,199.8z M1207.4,389.8c-38.7,0-70-31.3-70-70s31.3-70,70-70s70,31.3,70,70l0,0
-                        C1277.4,358.4,1246.1,389.8,1207.4,389.8z"/>
-                    <path class="letter" d="M962.6,389.8c-38.7,0-70-31.3-70-70c0-38.7,31.3-70,70-70c18.6,0,36.4,7.4,49.5,20.5l35.3-35.3
-                        c-46.9-46.9-122.8-46.9-169.7,0s-46.9,122.8,0,169.7c46.9,46.9,122.8,46.9,169.7,0c0,0,0,0,0,0l-35.3-35.4
-                        C999,382.4,981.1,389.8,962.6,389.8z"/>
-                    <path id="letter-e" class="letter" d="M772.9,254.5c-36.1-55.6-110.4-71.4-166-35.3c-55.6,36.1-71.4,110.4-35.3,166
-                        s110.4,71.4,166,35.3c34.1-22.1,54.7-60,54.7-100.7h-50c0,38.7-31.3,70-70,70c-9.9,0-19.6-2.1-28.6-6.1L772.9,254.5z
-                            M622.7,270.3c20.5-20.5,51.6-26.3,78.1-14.4l-92.5,92.5C596.5,321.8,602.2,290.8,622.7,270.3z"/>
-                    <path class="letter" d="M502.6,319.8v120h-50v-120c0-38.7-31.3-70-70-70s-70,31.3-70,70v120h-50v-120c0-38.7-31.3-70-70-70
-                        s-70,31.3-70,70v120h-50v-120c0-66.3,53.7-120,120-120c37.2,0,72.3,17.2,95,46.7c40.5-52.5,115.8-62.2,168.3-21.7
-                        C485.3,247.5,502.6,282.6,502.6,319.8z"/>
-                    <polygon id="chapeau" class="chapeau" points="672.2,130.9 721.7,180.4 757.1,145.1 707.6,95.6 672.2,60.2 636.9,95.6 587.4,145.1 
-                        622.7,180.4"/>
+                    #logo-nav:hover #letter-e {
+                        transform: rotateZ(45deg);
+                        transition: transform 0.3s;
+                    }
+                    #chapeau {
+                        transition: transform 0.3s;
+                    }
+                    #logo-nav:hover #chapeau {
+                        transform: translateY(-7%);
+                        transition: transform 0.3s;
+                    }
+                </style>
+                <g id="Layer">
+                    <g id="mêco-original">
+                        <path class="letter" d="M1207.4,199.8c-66.3,0-120,53.7-120,120s53.7,120,120,120s120-53.7,120-120l0,0
+                            C1327.4,253.5,1273.7,199.8,1207.4,199.8z M1207.4,389.8c-38.7,0-70-31.3-70-70s31.3-70,70-70s70,31.3,70,70l0,0
+                            C1277.4,358.4,1246.1,389.8,1207.4,389.8z"/>
+                        <path class="letter" d="M962.6,389.8c-38.7,0-70-31.3-70-70c0-38.7,31.3-70,70-70c18.6,0,36.4,7.4,49.5,20.5l35.3-35.3
+                            c-46.9-46.9-122.8-46.9-169.7,0s-46.9,122.8,0,169.7c46.9,46.9,122.8,46.9,169.7,0c0,0,0,0,0,0l-35.3-35.4
+                            C999,382.4,981.1,389.8,962.6,389.8z"/>
+                        <path id="letter-e" class="letter" d="M772.9,254.5c-36.1-55.6-110.4-71.4-166-35.3c-55.6,36.1-71.4,110.4-35.3,166
+                            s110.4,71.4,166,35.3c34.1-22.1,54.7-60,54.7-100.7h-50c0,38.7-31.3,70-70,70c-9.9,0-19.6-2.1-28.6-6.1L772.9,254.5z
+                                M622.7,270.3c20.5-20.5,51.6-26.3,78.1-14.4l-92.5,92.5C596.5,321.8,602.2,290.8,622.7,270.3z"/>
+                        <path class="letter" d="M502.6,319.8v120h-50v-120c0-38.7-31.3-70-70-70s-70,31.3-70,70v120h-50v-120c0-38.7-31.3-70-70-70
+                            s-70,31.3-70,70v120h-50v-120c0-66.3,53.7-120,120-120c37.2,0,72.3,17.2,95,46.7c40.5-52.5,115.8-62.2,168.3-21.7
+                            C485.3,247.5,502.6,282.6,502.6,319.8z"/>
+                        <polygon id="chapeau" class="chapeau" points="672.2,130.9 721.7,180.4 757.1,145.1 707.6,95.6 672.2,60.2 636.9,95.6 587.4,145.1 
+                            622.7,180.4"/>
+                    </g>
                 </g>
-            </g>
-        </svg>
+            </svg>
         </a>
         <ul id="navigation-bar-list">
-            <li id="services">
-                <a id="services-link" class="drop-down" href="#" tabindex="0" aria-label="Services">
-                    <span class="drop-down-title text-clickable">Nos services</span><span class="drop-down-arrow"></span>
+            <li id="services" class="nav-item">
+                <a id="services-link" class="drop-down" href="#services-link" tabindex="0" aria-label="Services" onclick="drop_down_services()">
+                    <span id="services-title" class="drop-down-title text-clickable">Nos services</span><span class="drop-down-arrow"></span>
                 </a>
+                <ul id="drop-down-content">
+                    <li id="isolation" class="drop-down-item text-clickable"><a id="isolation-link" class="drop-down-item-link" href="#" aria-label="Isoler ma maison">Isoler ma maison</a></li>
+                    <li id="chauffage" class="drop-down-item text-clickable"><a id="chauffage-link" class="drop-down-item-link" href="#" aria-label="Changer mon chauffage">Changer mon chauffage</a></li>
+                    <li id="energie" class="drop-down-item text-clickable"><a id="energie-link" class="drop-down-item-link" href="#" aria-label="Energie solaire">Energie solaire</a></li>
+                </ul>
             </li>
-            <li id="about">
+            <li id="about" class="nav-item">
                 <a id="about-link" class="text-clickable link" href="#" tabindex="0" aria-label="Qui sommes nous?">Qui sommes nous?</a>
             </li>
-            <li>
+            <li id="cta-nav" class="nav-item">
                 <a id="cta-nav-link" href="#" aria-label="Réaliser mon projet" tabindex="0">
-                    <button id="cta-nav" class="text-button button-special-private" tabindex="-1">Réaliser mon projet</button>
+                    <button id="cta-nav-button" class="text-button button-special-private" tabindex="-1">Réaliser mon projet</button>
                 </a>
             </li>
         </ul>
@@ -84,5 +89,6 @@
 <section id="newsletter" class="page-section"></section>
 <footer id="page-footer" class="page-section"></footer>
 <script src="scroll.js"></script>
+<script src="drop-down.js"></script>
 </body>
 </html>
