--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
                 <a id="about-link" class="text-clickable link" href="#" tabindex="0" aria-label="Qui sommes nous?">Qui sommes nous?</a>
             </li>
             <li id="cta-nav" class="nav-item">
-                <a id="cta-nav-link" href="#" aria-label="Réaliser mon projet" tabindex="0">
-                    <button id="cta-nav-button" class="text-button button-special-private" tabindex="-1">Réaliser mon projet</button>
-                </a>
+                <a id="cta-nav-link" class="text-button button-special-private" href="#" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
             </li>
         </ul>
     </div>
