--- a/index.html
+++ b/index.html
@@ -78,14 +78,25 @@
         </ul>
     </div>
 </nav>
-<header id="page-heading" class="page-section"></header>
-<section id="values-intro" class="page-section"></section>
+<header id="page-heading" class="page-section">
+    <div id="content-box-heading" class="content-box-page-section">
+        <h1 id="heading-title" class="text-page-title">Rénover votre maison<br/>sans vous inquiêter du coût</h1>
+        <p id="heading-body" class="text-title-body">Mêco aide la famille française le long de son parcours vers la transition énergitique.</p>
+        <a id="cta-heading-link" class="text-button button-special-private" href="#" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
+    </div>
+</header>
+<section id="values-intro" class="page-section">
+    <div id="content-box-values-intro" class="content-box-page-section">
+        <h2 id="values-intro-title" class="text-big-header section-title">Vivez dans la maison que vous méritez avec Mêco.</h2>
+    </div>
+</section>
 <section id="values" class="page-section"></section>
 <section id="services" class="page-section"></section>
 <section id="faq" class="page-section"></section>
 <section id="reviews" class="page-section"></section>
 <section id="newsletter" class="page-section"></section>
 <footer id="page-footer" class="page-section"></footer>
+<div id="pattern"></div>
 <script src="scroll.js"></script>
 <script src="drop-down.js"></script>
 </body>
