--- a/index.html
+++ b/index.html
@@ -90,14 +90,79 @@
         <h2 id="values-intro-title" class="text-big-header section-title">Vivez dans la maison que vous méritez avec Mêco.</h2>
     </div>
 </section>
-<section id="values" class="page-section"></section>
-<section id="services" class="page-section"></section>
-<section id="faq" class="page-section"></section>
+<section id="values" class="page-section">
+    <div id="content-box-values" class="content-box-page-section">
+        <ul id="values-list">
+            <li class="values-list-item">
+                <img src="images/visuals/économie-illustration.svg" alt="économie-illustration"/>
+                <h3 class="values-list-item-title text-small-header">Economisez votre consommation d'énergie</h3>
+                <p class="values-list-item-description text-small-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
+            </li>
+            <li class="values-list-item">
+                <img src="images/visuals/écologie-illustration.svg" alt="écologie-illustration"/>
+                <h3 class="values-list-item-title text-small-header">Habitez dans un milieu plus écologique</h3>
+                <p class="values-list-item-description text-small-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
+            </li>
+            <li class="values-list-item">
+                <img src="images/visuals/confort-illustration.svg" alt="confort-illustration"/>
+                <h3 class="values-list-item-title text-small-header">Assurez une vie pleine de confort dans votre maison</h3>
+                <p class="values-list-item-description text-small-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
+            </li>
+        </ul>
+    </div>
+</section>
+<section id="services" class="page-section">
+    <div id="content-box-services" class="content-box-page-section">
+        <h2 id="services-title" class="text-big-header section-title">Nous vous proposons des travaux de renovation énergetique de qualité</h2>
+        <ul id="services-list">
+            <li class="services-list-item">
+                <img src="images/visuals/isolation-illustration.svg" alt="isolation-illustration"/>
+                <h3 class="services-list-item-title text-small-header">Isolation thermique</h3>
+                <p class="services-list-item-description text-small-body">Votre maison sera moins énergivore avec nos produits.</p>
+                <a href="#" class="services-list-item-link text-clickable button-normal-public" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
+            </li>
+            <li class="services-list-item">
+                <img src="images/visuals/chauffage-illustration.svg" alt="chauffage-illustration"/>
+                <h3 class="services-list-item-title text-small-header">Chauffage</h3>
+                <p class="services-list-item-description text-small-body">Votre maison sera moins énergivore avec nos produits.</p>
+                <a href="#" class="services-list-item-link text-clickable button-normal-public" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
+            </li>
+            <li class="services-list-item">
+                <img src="images/visuals/énergie-illustration.svg" alt="énergie-illustration"/>
+                <h3 class="services-list-item-title text-small-header">Energie solaire</h3>
+                <p class="services-list-item-description text-small-body">Votre maison sera moins énergivore avec nos produits.</p>
+                <a href="#" class="services-list-item-link text-clickable button-normal-public" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
+            </li>
+        </ul>
+    </div>
+</section>
+<section id="faq" class="page-section">
+    <div id="content-box-faq" class="content-box-page-section">
+        <h2 id="faq-title" class="text-big-header section-title">Avez vous des questions?<br/>Ne cherchez pas dehors!</h2>
+        <div id="faq-box">
+            <ul id="faq-questions-list">
+                <li id="faq-question-1" class="text-clickable faq-question faq-question-active" aria-label="Question 1" onclick="show_answer(1)">Comment se font les travaux d'installation des pompes à chaleur?<span class="faq-question-arrow"></span></li>
+                <li id="faq-question-2" class="text-clickable faq-question" aria-label="Question 2" onclick="show_answer(2)" tabindex="0">Comment se font les travaux d'installation?<span class="faq-question-arrow"></span></li>
+                <li id="faq-question-3" class="text-clickable faq-question" aria-label="Question 3" onclick="show_answer(3)" tabindex="0">Comment se font les travaux d'installation?<span class="faq-question-arrow"></span></li>
+                <li id="faq-question-4" class="text-clickable faq-question" aria-label="Question 4" onclick="show_answer(4)" tabindex="0">Comment se font les travaux d'installation?<span class="faq-question-arrow"></span></li>
+                <li id="faq-question-5" class="text-clickable faq-question" aria-label="Question 5" onclick="show_answer(5)" tabindex="0">Comment se font les travaux d'installation?<span class="faq-question-arrow"></span></li>
+            </ul>
+            <ul id="faq-answers-list">
+                <li id="faq-answer-1" class="text-small-body faq-answer faq-answer-active"><b>Reponse:</b><br/>les travaux se font de maniere bien étudiée après une visite du logement par notre équipe d'installation qualifiée.<br/>les travaux se font de maniere bien étudiée après une visite du logement par notre équipe d'installation qualifiée.<br/>les travaux se font de maniere bien étudiée après une visite du logement par notre équipe d'installation qualifiée.<br/>les travaux se font de maniere bien étudiée après une visite du logement par notre équipe d'installation qualifiée.</li>
+                <li id="faq-answer-2" class="text-small-body faq-answer">Answer 2</li>
+                <li id="faq-answer-3" class="text-small-body faq-answer">Answer 3</li>
+                <li id="faq-answer-4" class="text-small-body faq-answer">Answer 4</li>
+                <li id="faq-answer-5" class="text-small-body faq-answer">Answer 5</li>
+            </ul>
+        </div>
+    </div>
+</section>
 <section id="reviews" class="page-section"></section>
 <section id="newsletter" class="page-section"></section>
 <footer id="page-footer" class="page-section"></footer>
 <div id="pattern"></div>
 <script src="scroll.js"></script>
 <script src="drop-down.js"></script>
+<script src="faq.js"></script>
 </body>
 </html>
