aria label for submit

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <input type="email" name="newsletter-email-input" id="newsletter-email-input" class="text-input" placeholder="Entrer votre email" onchange="email_input_validation()">
                 <p id="newsletter-email-input-hint" class="text-input-hint">Entrer une adresse electronique valide</p>
             </div>
-            <input type="submit" id="newsletter-email-submit" value="S'inscrire" class="button-special-private text-clickable" tabindex="0" onfocus="document.getElementById('newsletter-section').scrollIntoView();">
+            <input type="submit" id="newsletter-email-submit" value="S'inscrire" class="button-special-private text-clickable" tabindex="0" aria-label="s'inscrire" onfocus="document.getElementById('newsletter-section').scrollIntoView();">
         </form>
     </div>
 </section>
