--- a/app/app-17.html
+++ b/app/app-17.html
@@ -2,7 +2,7 @@
     <ul class="choices-box">
         <form class="input-drop-down-form" id="surface-toit-form" action="" >
             <div id="input-drop-down-box" class="input-box">
-                <label id="surface-toit-input-label" for="surface-toit-input" class="text-label input-label">N° de Département</label>
+                <label id="surface-toit-input-label" for="surface-toit-input" class="text-label input-label">Surface Disponible</label>
                 <select name="surface-toit-input" id="surface-toit-input" class="text-clickable input input-drop-down" >
                         <option class="input-drop-down-choice text-clickable" value="1">&nbsp;&nbsp;15m²</option>
                         <option class="input-drop-down-choice text-clickable" value="2">&nbsp;&nbsp;20m²</option>
