--- a/app/app-18.html
+++ b/app/app-18.html
@@ -2,7 +2,7 @@
     <ul class="choices-box">
         <form class="input-drop-down-form" id="facture-form" action="" >
             <div id="input-drop-down-box" class="input-box">
-                <label id="facture-input-label" for="facture-input" class="text-label input-label">N° de Département</label>
+                <label id="facture-input-label" for="facture-input" class="text-label input-label">Montant de la facture d'électricité</label>
                 <select name="facture-input" id="facture-input" class="text-clickable input input-drop-down" >
                         <option class="input-drop-down-choice text-clickable" value="1">&nbsp;&nbsp;inférieur à 700€</option>
                         <option class="input-drop-down-choice text-clickable" value="2">&nbsp;&nbsp;entre 700€ et 1500€</option>
