--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
     <div id="content-box-values" class="content-box-page-section">
         <ul id="values-list">
             <li class="values-list-item">
-                <img src="images/visuals/économie-illustration.svg" alt="économie-illustration"/>
+                <img src="images/visuals/economie-illustration.svg" alt="économie-illustration"/>
                 <h3 class="values-list-item-title text-small-header">Economisez votre consommation d'énergie</h3>
                 <p class="values-list-item-description text-small-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
             </li>
             <li class="values-list-item">
-                <img src="images/visuals/écologie-illustration.svg" alt="écologie-illustration"/>
+                <img src="images/visuals/ecologie-illustration.svg" alt="écologie-illustration"/>
                 <h3 class="values-list-item-title text-small-header">Habitez dans un milieu plus écologique</h3>
                 <p class="values-list-item-description text-small-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
             </li>
@@ -131,7 +131,7 @@
                 <a href="#" class="services-section-list-item-link text-clickable button button-secondary-normal" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
             </li>
             <li class="services-section-list-item">
-                <img src="images/visuals/énergie-illustration.svg" alt="énergie-illustration"/>
+                <img src="images/visuals/electricite-illustration.svg" alt="énergie-illustration"/>
                 <h3 class="services-section-list-item-title text-small-header">Energie solaire</h3>
                 <p class="services-section-list-item-description text-small-body">Votre maison sera moins énergivore avec nos produits.</p>
                 <a href="#" class="services-section-list-item-link text-clickable button button-secondary-normal" aria-label="En savoir plus" tabindex="0" onfocus="document.getElementById('services-section').scrollIntoView();">En savoir plus</a>
