--- a/app/index.html
+++ b/app/index.html
@@ -73,9 +73,9 @@
             </div>
         </div>
         <div id="buttons-box">
-            <button id="button-left" class="text-clickable button button-display-none"></button>
+            <button id="button-left" class="text-clickable button button-display-none" onclick="go_to_page(current_app_page-1); current_app_page--;"></button>
             <div id="between-buttons"></div>
-            <button id="button-right" class="text-clickable button button-display-none" onclick="myfunction()"></button>
+            <button id="button-right" class="text-clickable button button-display-none" onclick="go_to_page(current_app_page+1); current_app_page++;"></button>
         </div>
     </div>
     <div id="progress-bar">
