--- a/app/app-9.html
+++ b/app/app-9.html
@@ -1,4 +1,4 @@
-<div id="app-9" class="radio-choices" data-title="Quel est le type d'énergie de votre chauffage?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="13">
+<div id="app-9" class="radio-choices" data-title="Quel est le type d'énergie de votre chauffage?" data-description="Si vous en avez plusieurs, veuillez sélectionner le type principal" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="13">
     <ul class="choices-box">
         <li class="choice radio-choice" data-order="1" data-go_to="10" onclick="update_app(this)">
             <span class="choice-image" data-image_src="fioul"></span>
