--- a/app/app-13.html
+++ b/app/app-13.html
@@ -1,7 +1,7 @@
 <div id="app-13" class="input-drop-down-choice" data-title="Veuillez choisir votre département" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="7">
     <ul class="choices-box">
         <form class="input-drop-down-form" id="department-form" action="" >
-            <div id="input-drop-down-box" class="input-box">
+            <div class="input-box input-drop-down-box">
                 <label id="department-input-label" for="department-input" class="text-label input-label">N° de Département</label>
                 <select name="department-input" id="department-input" class="text-clickable input input-drop-down" >
                         <option class="input-drop-down-choice text-clickable" value="1">&nbsp;&nbsp;01 - paris</option>
