--- a/app/app-16.html
+++ b/app/app-16.html
@@ -1,7 +1,7 @@
 <div id="app-16" class="input-drop-down-choice" data-title="Veuillez selectionner la surface que vous estimez disponible sur votre toit" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="33">
     <ul class="choices-box">
         <form class="input-drop-down-form" id="surface-toit-form" action="" >
-            <div id="input-drop-down-box" class="input-box">
+            <div class="input-drop-down-box input-box">
                 <label id="surface-toit-input-label" for="surface-toit-input" class="text-label input-label">Surface Disponible</label>
                 <select name="surface-toit-input" id="surface-toit-input" class="text-clickable input input-drop-down" >
                         <option class="input-drop-down-choice text-clickable" value="1">&nbsp;&nbsp;15m²</option>
