--- a/app/app-17.html
+++ b/app/app-17.html
@@ -1,7 +1,7 @@
 <div id="app-17" class="input-drop-down-choice" data-title="Veuillez préciser le montant approximatif de votre facture d'électricité" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="40">
     <ul class="choices-box">
         <form class="input-drop-down-form" id="facture-form" action="" >
-            <div id="input-drop-down-box" class="input-box">
+            <div class="input-box input-drop-down-box">
                 <label id="facture-input-label" for="facture-input" class="text-label input-label">Montant de la facture d'électricité</label>
                 <select name="facture-input" id="facture-input" class="text-clickable input input-drop-down" >
                         <option class="input-drop-down-choice text-clickable" value="1">&nbsp;&nbsp;inférieur à 700€</option>
