energie solaire image src

--- a/app/app-1.html
+++ b/app/app-1.html
@@ -9,7 +9,7 @@
             <span class="choice-caption text-clickable">Isolation thermique des maisons</span>
         </li>
         <li class="choice radio-choice" data-order="3" data-go_to="13" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="electricite"></span>
+            <span class="choice-image" data-image_src="energie-solaire"></span>
             <span class="choice-caption text-clickable">Installation des panneaux solaires</span>
         </li>
     </ul>
